# cpp-data-pipeline

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: scrc_cpp_api_mac.yml  scrc_cpp_api_ubuntu.yml  scrc_cpp_api_windows.yml
include/: datapipeline.hh  distributions.hh
src/: CMakeLists.txt
tests/: CMakeLists.txt  setup.hh  test_distribution_pipeline.cc
tests/test_config/: metadata.yaml
